--- a/Tensorflow/1) Basics.ipynb
+++ b/Tensorflow/1) Basics.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sruja\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,237 +239,6 @@
     "numpy_array = np.array([1,2,3,4,5])\n",
     "converted_tensor = tf.convert_to_tensor(numpy_array)\n",
     "print(converted_tensor)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tensor Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# eye\n",
-    "eye_tensor = tf.eye(\n",
-    "    num_rows=3,\n",
-    "    num_columns=5,\n",
-    "    batch_shape=None,\n",
-    "    dtype=tf.dtypes.float32,\n",
-    "    name=None\n",
-    ")\n",
-    "\n",
-    "print(f\"{eye_tensor}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[6 6 6 6]\n",
-      " [6 6 6 6]\n",
-      " [6 6 6 6]], shape=(3, 4), dtype=int32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# fill\n",
-    "fill_tensor = tf.fill((3,4),6)\n",
-    "print(fill_tensor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]], shape=(3, 4), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ones\n",
-    "tensor_ones = tf.ones((3,4))\n",
-    "print(tensor_ones)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[[1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]]\n",
-      "\n",
-      " [[1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]]\n",
-      "\n",
-      " [[1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]]], shape=(3, 4, 5), dtype=int32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "tensor_ones_like = tf.ones_like(\n",
-    "    tensor_three_d,\n",
-    ")\n",
-    "print(tensor_ones_like)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]], shape=(3, 4), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# zeros\n",
-    "tensor_zeros = tf.zeros(\n",
-    "    (3,4)\n",
-    ")\n",
-    "print(tensor_zeros)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([3 4 5], shape=(3,), dtype=int32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# knowing the shape\n",
-    "print(tf.shape(tensor_three_d))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(1, shape=(), dtype=int32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# rank of a tensor\n",
-    "print(tf.rank(tf.constant([1,8,23])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(60, shape=(), dtype=int32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# size of a tensor\n",
-    "print(tf.size(tensor_three_d))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Random functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
-       "array([[ 0.39550617, -0.29961213],\n",
-       "       [-0.29561213, -1.034551  ],\n",
-       "       [-0.11772624, -0.59361756]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# random values from normal distrubution\n",
-    "# generated random values are centered \n",
-    "# around the mean specified\n",
-    "\n",
-    "random_tensor = tf.random.normal(\n",
-    "    [3,2],\n",
-    "    mean=0,\n",
-    "    stddev=1\n",
-    ")\n",
-    "\n",
-    "random_tensor"
    ]
   }
  ],
