--- a/Tensorflow/3) Indexing.ipynb
+++ b/Tensorflow/3) Indexing.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sruja\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import warnings\n",
@@ -28,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([ 9 23 21], shape=(3,), dtype=int32)\n"
+      "tf.Tensor([27 48 28], shape=(3,), dtype=int32)\n"
      ]
     }
    ],
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +86,24 @@
     "    ]\n",
     ")\n",
     "print(tensor_2d[1:4,0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([2 8 2 5], shape=(4,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ... is used to select all the elements\n",
+    "print(tensor_2d[..., 1])"
    ]
   }
  ],
